--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.0.9
   provider: ^6.0.3
   grouped_list: ^5.1.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
